bugfix. search: chat was behind scroll

--- a/src/Components/Scrollbar.css
+++ b/src/Components/Scrollbar.css
@@ -1,3 +1,7 @@
+.scrollbar-container .ps__rail-y {
+    z-index: 1;
+}
+
 .scrollbar-light .ps__thumb-y {
     background-color: rgba(0, 0, 0, 0.65);
 }
